# arcticvox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/arcticvox/common/: engine_configuration.hpp
include/arcticvox/components/: camera_controller.hpp  colour.hpp  fps_camera_controller.hpp  gameobject.hpp  model.hpp  position.hpp  push_constant.hpp  transform.hpp  uv.hpp  vertex.hpp
include/arcticvox/graphics/: camera.hpp  driver.hpp  engine.hpp  gpu.hpp  graphics_device.hpp  pipeline.hpp  render_system.hpp  renderer.hpp  swapchain.hpp  window.hpp
include/arcticvox/io/: cursor.hpp  filesystem.hpp  fmt_formatters.hpp  input.hpp  model_builder.hpp  shaderloader.hpp
resources/shaders/: CMakeLists.txt  glsl.cmake
resources/shaders/fragment/: fragment_shader.frag.glsl
resources/shaders/vertex/: vertex_shader.vert.glsl
src/: main.cpp
src/components/: fps_camera_controller.cpp  model.cpp  vertex.cpp
src/graphics/: camera.cpp  driver.cpp  engine.cpp  gpu.cpp  graphics_device.cpp  pipeline.cpp  render_system.cpp  renderer.cpp  swapchain.cpp  window.cpp
src/io/: cursor.cpp  filesystem.cpp  input.cpp  model_builder.cpp  shaderloader.cpp
